--- a/card.html
+++ b/card.html
@@ -1,7 +1,8 @@
 <html>
 <body>
     <div itemscope itemtype="http://schema.org/Person">
-      <span itemprop="name">Jakub Kanclerz</span>
+      <span itemprop="name">Radoslaw Celary</span>
+	<img src="" alt="tu powinno byc zdjecie"/>
       <span itemprop="jobTitle">Student</span>
       <a href="http://v-ie.uek.krakow.pl/~s153412" itemprop="url">http://v-ie.uek.krakow.pl/~s153412</a>
     </div>
