--- a/card.html
+++ b/card.html
@@ -4,7 +4,7 @@
       <span itemprop="name">Radoslaw Celary</span>
 	<img src="" alt="tu powinno byc zdjecie"/>
       <span itemprop="jobTitle">Student</span>
-      <a href="http://v-ie.uek.krakow.pl/~s153412" itemprop="url">http://v-ie.uek.krakow.pl/~s153412</a>
+      <a href="http://v-ie.uek.krakow.pl/~s179861 itemprop="url">http://v-ie.uek.krakow.pl/~s153412</a>
     </div>
   </body>
 </html>
