--- a/card.html
+++ b/card.html
@@ -5,6 +5,11 @@
 	<img src="" alt="tu powinno byc zdjecie"/>
       <span itemprop="jobTitle">Student</span>
       <a href="http://v-ie.uek.krakow.pl/~s179861" itemprop="url">http://v-ie.uek.krakow.pl/~s179861</a>
+	<ul>
+		<li><a href="http://www.facebook.com">G</a></li>
+		<li><a href="http://twitter.com">T</a></li>
+		<li><a href="http://www.google.pl">G+</a></li>	
+	</ul>
     </div>
   </body>
 </html>
