--- a/card.html
+++ b/card.html
@@ -1,4 +1,4 @@
-<html>
+<tml>
 <body>
     <div itemscope itemtype="http://schema.org/Person">
       <span itemprop="name">Radoslaw Celary</span>
@@ -6,10 +6,10 @@
       <span itemprop="jobTitle">Student</span>
       <a href="http://v-ie.uek.krakow.pl/~s179861" itemprop="url">http://v-ie.uek.krakow.pl/~s179861</a>
 	<ul>
-		<li><a href="http://www.facebook.com">G</a></li>
 		<li><a href="http://twitter.com">T</a></li>
 		<li><a href="http://www.google.pl">G+</a></li>	
 	</ul>
+	<div>Moje zainteresowania są fajne</div>
     </div>
   </body>
 </html>
