--- a/card.html
+++ b/card.html
@@ -1,10 +1,13 @@
-<tml>
+<html>
+<head>
+	<meta charset="UTF-8"/>
+</head>
 <body>
     <div itemscope itemtype="http://schema.org/Person">
       <span itemprop="name">Radoslaw Celary</span>
 	<img src="" alt="tu powinno byc zdjecie"/>
       <span itemprop="jobTitle">Student</span>
-      <a href="http://v-ie.uek.krakow.pl/~s179861" itemprop="url">http://v-ie.uek.krakow.pl/~s179861</a>
+      <a href="http://v-ie.uek.krakow.pl/~s179861">http://v-ie.uek.krakow.pl/~s179861</a>
 	<ul>
 		<li><a href="http://twitter.com">T</a></li>
 		<li><a href="http://www.google.pl">G+</a></li>	
